--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2010-01-15
+    Fixed some problem caused by encoding.
+
 2010-01-14
     Use a new template index.html now.
     index.html now has a skin.
