--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 2010-01-15
     Fixed some problem caused by encoding.
+    Added /users for check who used this app, using users.html as its template, add an entry on index.html.
+    Fixed some words on the pages in order to be more friendly.
 
 2010-01-14
     Use a new template index.html now.
